# epochlib

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new-feature.md
.github/workflows/: branch-name-check.yml  label-issue.yml  main-branch-testing.yml  publish-docs.yaml  publish-package.yml  python-package-testing.yml  retarget-dependabot-pr.yml  static-analysis.yml  version-branch-testing.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: logo.css
epochalyst/: __init__.py  ensemble.py  model.py
epochalyst/_core/: __init__.py
epochalyst/_core/_caching/: __init__.py  _cacher.py
epochalyst/_core/_imports/: _self.py
epochalyst/_core/_logging/: __init__.py  _logger.py
epochalyst/_core/_pipeline/: __init__.py  _custom_data_parallel.py
epochalyst/_core/logger/: logger.py
epochalyst/caching/: __init__.py  cacher.py
epochalyst/data/: __init__.py  enum_data_format.py  pipeline_dataset.py  test_enum_data_format.py
epochalyst/logging/: __init__.py  logger.py  section_separator.py
epochalyst/model/: __init__.py  ensemble.py  model.py
epochalyst/model/training/: __init__.py  pretrain_block.py  torch_trainer.py  training.py  training_block.py
epochalyst/model/training/augmentation/: __init__.py  time_series_augmentations.py  utils.py
epochalyst/model/training/utils/: __init__.py
epochalyst/model/transformation/: __init__.py  transformation.py  transformation_block.py
epochalyst/pipeline/: ensemble.py
epochalyst/pipeline/caching/dask_array/: __init__.py  base_cache_block.py  cache_column_block.py  cache_full_block.py
epochalyst/pipeline/model/: __init__.py  model.py
epochalyst/pipeline/model/training/: __init__.py  pretrain_block.py  torch_trainer.py  training.py  training_block.py
epochalyst/pipeline/model/training/_utils/: _collate_fn.py  dask_dataset.py  torch_layerwise_lr.py
epochalyst/pipeline/model/training/augmentation/: __init__.py  image_augmentations.py  time_series_augmentations.py  utils.py
epochalyst/pipeline/model/training/models/: __init__.py  timm.py
epochalyst/pipeline/model/training/trainers/: pretrain_block.py  torch_block.py  torch_trainer.py
epochalyst/pipeline/model/training/utils/: __init__.py  get_onnxrt.py  get_openvino.py  recursive_repr.py  tensor_functions.py
epochalyst/pipeline/model/transformation/: __init__.py  transformation.py  transformation_block.py
epochalyst/training/: pretrain_block.py  torch_trainer.py  training.py  training_block.py
epochalyst/training/augmentation/: __init__.py  time_series_augmentations.py  utils.py
epochalyst/training/models/: __init__.py
epochalyst/training/utils/: __init__.py
epochalyst/transformation/: transformation.py  transformation_block.py
epochalyst/utils/: __init__.py  cacher.py  logger.py
epochlib/: __init__.py  ensemble.py  model.py
epochlib/caching/: __init__.py  cacher.py
epochlib/core/: __init__.py  base.py  block.py  parallel_system.py  parallel_training_system.py  parallel_transforming_system.py  pipeline.py  sequential_system.py  trainer.py  training.py  training_system.py  transformer.py  transforming.py  transforming_system.py  types.py
epochlib/data/: __init__.py  pipeline_dataset.py
epochlib/logging/: logger.py
epochlib/pipeline/: __init__.py  core.py  training.py  transforming.py
epochlib/training/: __init__.py  pretrain_block.py  torch_trainer.py  training.py  training_block.py
epochlib/training/augmentation/: __init__.py  image_augmentations.py  utils.py
epochlib/training/models/: __init__.py  conv1d_bn_relu.py
epochlib/training/utils/: get_dependencies.py  tensor_functions.py
epochlib/transformation/: transformation.py  transformation_block.py
tests/: __init__.py  conftest.py  constants.py  test_ensemble.py  test_model.py  util.py
tests/_core/_caching/: test__cacher.py
tests/_core/_imports/: test__self.py
tests/_core/_logging/: test__logger.py  test_logger.py
tests/cache/: README.md
tests/caching/: test__cacher.py
tests/core/: test_base.py  test_block.py  test_core.py  test_parallel_system.py  test_parallel_training_system.py  test_parallel_transforming_system.py  test_pipeline.py  test_sequential_system.py  test_trainer.py  test_training.py  test_training_system.py  test_transformer.py  test_transforming.py  test_transforming_system.py
tests/data/: test_enum_data_format.py  test_pipeline_dataset.py
tests/logging/: test_logger.py
tests/model/: test_ensemble.py  test_model.py  test_recursive_repr.py
tests/model/training/: test_pretrain_block.py  test_torch_trainer.py  test_training.py  test_training_block.py
tests/model/training/augmentation/: test_image_augmentations.py  test_time_series_augmentations.py  test_utils.py
tests/model/training/models/: test_timm.py
tests/model/training/utils/: test_get_dependencies.py
tests/model/transformation/: test_transformation.py  test_transformation_block.py
tests/pipeline/: test__core.py  test_ensemble.py  test_recursive_repr.py  test_training.py  test_transforming.py  util.py
tests/pipeline/caching/dask_array/: test_base_cache_block.py  test_cache_column_block.py  test_full_block.py
tests/pipeline/model/: test_model.py
tests/pipeline/model/training/: test_pretrain_block.py  test_torch_trainer.py  test_training.py  test_training_block.py
tests/pipeline/model/transformation/: test_transformation.py  test_transformation_block.py
tests/training/: test_pretrain_block.py  test_torch_trainer.py  test_training.py  test_training_block.py
tests/training/augmentation/: test_image_augmentations.py  test_time_series_augmentations.py  test_utils.py
tests/training/models/: test_cnv1d_bn_relu.py  test_conv1d_bn_relu.py  test_timm.py
tests/training/utils/: test_get_dependencies.py  test_recursive_repr.py  test_tensor_functions.py
tests/transformation/: test_transformation.py  test_transformation_block.py
tests/utils/: test__cacher.py  test_logger.py
(+5 files in other folders)
