[project]
name = "epochalyst"
version = "0.1.7"
authors = [
    { name = "Jasper van Selm", email = "jmvanselm@gmail.com" },
    { name = "Ariel Ebersberger", email = "arielebersberger@gmail.com" },
    { name = "Tolga Kopar", email = "cahittolgakopar@gmail.com" },
    { name = "Jeffrey Lim", email = "jeffrey-lim@outlook.com" },
]
description = "This package contains the code for team Epoch's pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= [
    # Machine Learning Libraries
    "numpy>=1.22.4",

    # Parallel Processing Libraries
    "dask>=2023.12.0",

    # Data Processing Libraries
    "pandas>=1.3.0",

    # Parquet
    "pyarrow>=6.0.0",

    # PyTorch
    "torch>=2.1.0",

    # Agogos
    "agogos>=0.2.1",
]
