[project]
name = "epochalyst"
version = "4.0"
authors = [
    { name = "Jasper van Selm", email = "jmvanselm@gmail.com" },
    { name = "Ariel Ebersberger", email = "arielebersberger@gmail.com" },
    { name = "Tolga Kopar", email = "cahittolgakopar@gmail.com" },
    { name = "Jeffrey Lim", email = "jeffrey-lim@outlook.com" },
    { name = "Hugo de Heer", email = "hugodeheer1234@gmail.com"},
    { name = "Emiel Witting", email = "emiel.witting@gmail.com"},
    { name = "Gregoire Dumont", email = "dumont.gregoire.a@gmail.com"},
    { name = "Kristóf Sandor", email = "emherk512@gmail.com"},
    { name = "Daniel De Dios Allegue", email = "danieldediosallegue@gmail.com"}
]
description = "Epochalyst is the base for Team Epoch competitions."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]
dependencies = [
    "torch>=2.1.0",
    "agogos>=0.4",
    "joblib>=1.4.0",
    "annotated-types>=0.6.0",
    "typing-extensions>=4.9.0; python_version<'3.12'",
]

[project.optional-dependencies]
image = [
    "kornia>=0.7.2",
    "timm>=0.9.16",
]
numpy = [
    "numpy>=1.22.4, < 2",
]
pandas = [
    "pandas[performance, parquet]>=2.0.0",
]
dask = [
    "dask[dataframe]>=2024.2.1",
    "dask-expr>=0.5.3",
]
polars = [
    "polars>=0.20.22",
]
onnx = [
    "onnx>=1.16.1",
    "onnxruntime>=1.18.0"
]
openvino = [
    "openvino>=2024.2.0"
]
audio = [
    "audiomentations>=0.36.0"
]

[project.urls]
Homepage = "https://teamepoch.ai/"
Documentation = "https://TeamEpochGithub.github.io/epochalyst/"
Repository = "https://github.com/TeamEpochGithub/epochalyst"
Download = "https://pypi.org/project/epochalyst/#files"
Issues = "https://github.com/TeamEpochGithub/epochalyst/issues"
"Release notes" = "https://github.com/TeamEpochGithub/epochalyst/releases"

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "sphinx>=7.2.6",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinxawesome-theme>=5.1.1",
    "myst-parser>=2.0.0",
    "pygit2>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["epochalyst"]

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
check-return-types = false
show-filenames-in-every-violation-message = true
